qt/gen_qplaintextedit.nim

proc fcQPlainTextDocumentLayout_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_childEvent".}
proc fQPlainTextDocumentLayout_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QPlainTextDocumentLayout_virtualbase_customEvent".}
proc fcQPlainTextDocumentLayout_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_customEvent".}
proc fQPlainTextDocumentLayout_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QPlainTextDocumentLayout_virtualbase_connectNotify".}
proc fcQPlainTextDocumentLayout_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_connectNotify".}
proc fQPlainTextDocumentLayout_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QPlainTextDocumentLayout_virtualbase_disconnectNotify".}
proc fcQPlainTextDocumentLayout_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_disconnectNotify".}
proc fcQPlainTextDocumentLayout_delete(self: pointer) {.importc: "QPlainTextDocumentLayout_delete".}


func init*(T: type QPlainTextEdit, h: ptr cQPlainTextEdit): QPlainTextEdit =
  T(h: h)
proc create*(T: type QPlainTextEdit, parent: gen_qwidget.QWidget): QPlainTextEdit =

  QPlainTextEdit.init(fcQPlainTextEdit_new(parent.h))
proc create*(T: type QPlainTextEdit, ): QPlainTextEdit =

  QPlainTextEdit.init(fcQPlainTextEdit_new2())
proc create*(T: type QPlainTextEdit, text: string): QPlainTextEdit =

  QPlainTextEdit.init(fcQPlainTextEdit_new3(struct_miqt_string(data: text, len: csize_t(len(text)))))
proc create*(T: type QPlainTextEdit, text: string, parent: gen_qwidget.QWidget): QPlainTextEdit =

  QPlainTextEdit.init(fcQPlainTextEdit_new4(struct_miqt_string(data: text, len: csize_t(len(text))), parent.h))
proc metaObject*(self: QPlainTextEdit, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQPlainTextEdit_metaObject(self.h))

proc metacast*(self: QPlainTextEdit, param1: cstring): pointer =

  fcQPlainTextEdit_metacast(self.h, param1)

proc metacall*(self: QPlainTextEdit, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQPlainTextEdit_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QPlainTextEdit, s: cstring): string =

  let v_ms = fcQPlainTextEdit_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QPlainTextEdit, s: cstring): string =

  let v_ms = fcQPlainTextEdit_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setDocument*(self: QPlainTextEdit, document: gen_qtextdocument.QTextDocument): void =

  fcQPlainTextEdit_setDocument(self.h, document.h)

proc document*(self: QPlainTextEdit, ): gen_qtextdocument.QTextDocument =

  gen_qtextdocument.QTextDocument(h: fcQPlainTextEdit_document(self.h))

proc setPlaceholderText*(self: QPlainTextEdit, placeholderText: string): void =

  fcQPlainTextEdit_setPlaceholderText(self.h, struct_miqt_string(data: placeholderText, len: csize_t(len(placeholderText))))

proc placeholderText*(self: QPlainTextEdit, ): string =

  let v_ms = fcQPlainTextEdit_placeholderText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setTextCursor*(self: QPlainTextEdit, cursor: gen_qtextcursor.QTextCursor): void =

  fcQPlainTextEdit_setTextCursor(self.h, cursor.h)

proc textCursor*(self: QPlainTextEdit, ): gen_qtextcursor.QTextCursor =

  gen_qtextcursor.QTextCursor(h: fcQPlainTextEdit_textCursor(self.h))

proc isReadOnly*(self: QPlainTextEdit, ): bool =

  fcQPlainTextEdit_isReadOnly(self.h)

proc setReadOnly*(self: QPlainTextEdit, ro: bool): void =

  fcQPlainTextEdit_setReadOnly(self.h, ro)

proc setTextInteractionFlags*(self: QPlainTextEdit, flags: gen_qnamespace.TextInteractionFlag): void =

  fcQPlainTextEdit_setTextInteractionFlags(self.h, cint(flags))

proc textInteractionFlags*(self: QPlainTextEdit, ): gen_qnamespace.TextInteractionFlag =

  gen_qnamespace.TextInteractionFlag(fcQPlainTextEdit_textInteractionFlags(self.h))

proc mergeCurrentCharFormat*(self: QPlainTextEdit, modifier: gen_qtextformat.QTextCharFormat): void =

  fcQPlainTextEdit_mergeCurrentCharFormat(self.h, modifier.h)

proc setCurrentCharFormat*(self: QPlainTextEdit, format: gen_qtextformat.QTextCharFormat): void =

  fcQPlainTextEdit_setCurrentCharFormat(self.h, format.h)

proc currentCharFormat*(self: QPlainTextEdit, ): gen_qtextformat.QTextCharFormat =

  gen_qtextformat.QTextCharFormat(h: fcQPlainTextEdit_currentCharFormat(self.h))

proc tabChangesFocus*(self: QPlainTextEdit, ): bool =

  fcQPlainTextEdit_tabChangesFocus(self.h)

proc setTabChangesFocus*(self: QPlainTextEdit, b: bool): void =

  fcQPlainTextEdit_setTabChangesFocus(self.h, b)

proc setDocumentTitle*(self: QPlainTextEdit, title: string): void =

  fcQPlainTextEdit_setDocumentTitle(self.h, struct_miqt_string(data: title, len: csize_t(len(title))))

proc documentTitle*(self: QPlainTextEdit, ): string =

  let v_ms = fcQPlainTextEdit_documentTitle(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc isUndoRedoEnabled*(self: QPlainTextEdit, ): bool =

  fcQPlainTextEdit_isUndoRedoEnabled(self.h)

proc setUndoRedoEnabled*(self: QPlainTextEdit, enable: bool): void =

  fcQPlainTextEdit_setUndoRedoEnabled(self.h, enable)

proc setMaximumBlockCount*(self: QPlainTextEdit, maximum: cint): void =

  fcQPlainTextEdit_setMaximumBlockCount(self.h, maximum)

proc maximumBlockCount*(self: QPlainTextEdit, ): cint =

  fcQPlainTextEdit_maximumBlockCount(self.h)

proc lineWrapMode*(self: QPlainTextEdit, ): QPlainTextEditLineWrapMode =

  QPlainTextEditLineWrapMode(fcQPlainTextEdit_lineWrapMode(self.h))

proc setLineWrapMode*(self: QPlainTextEdit, mode: QPlainTextEditLineWrapMode): void =

  fcQPlainTextEdit_setLineWrapMode(self.h, cint(mode))

proc wordWrapMode*(self: QPlainTextEdit, ): gen_qtextoption.QTextOptionWrapMode =

  gen_qtextoption.QTextOptionWrapMode(fcQPlainTextEdit_wordWrapMode(self.h))

proc setWordWrapMode*(self: QPlainTextEdit, policy: gen_qtextoption.QTextOptionWrapMode): void =

  fcQPlainTextEdit_setWordWrapMode(self.h, cint(policy))

proc setBackgroundVisible*(self: QPlainTextEdit, visible: bool): void =

  fcQPlainTextEdit_setBackgroundVisible(self.h, visible)

proc backgroundVisible*(self: QPlainTextEdit, ): bool =

  fcQPlainTextEdit_backgroundVisible(self.h)

proc setCenterOnScroll*(self: QPlainTextEdit, enabled: bool): void =

  fcQPlainTextEdit_setCenterOnScroll(self.h, enabled)

proc centerOnScroll*(self: QPlainTextEdit, ): bool =

  fcQPlainTextEdit_centerOnScroll(self.h)

proc find*(self: QPlainTextEdit, exp: string): bool =

  fcQPlainTextEdit_find(self.h, struct_miqt_string(data: exp, len: csize_t(len(exp))))

proc findWithExp*(self: QPlainTextEdit, exp: gen_qregexp.QRegExp): bool =

  fcQPlainTextEdit_findWithExp(self.h, exp.h)

proc find2*(self: QPlainTextEdit, exp: gen_qregularexpression.QRegularExpression): bool =

  fcQPlainTextEdit_find2(self.h, exp.h)

proc toPlainText*(self: QPlainTextEdit, ): string =

  let v_ms = fcQPlainTextEdit_toPlainText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc ensureCursorVisible*(self: QPlainTextEdit, ): void =

  fcQPlainTextEdit_ensureCursorVisible(self.h)

proc loadResource*(self: QPlainTextEdit, typeVal: cint, name: gen_qurl.QUrl): gen_qvariant.QVariant =

  gen_qvariant.QVariant(h: fcQPlainTextEdit_loadResource(self.h, typeVal, name.h))

proc createStandardContextMenu*(self: QPlainTextEdit, ): gen_qmenu.QMenu =

  gen_qmenu.QMenu(h: fcQPlainTextEdit_createStandardContextMenu(self.h))

proc createStandardContextMenuWithPosition*(self: QPlainTextEdit, position: gen_qpoint.QPoint): gen_qmenu.QMenu =

  gen_qmenu.QMenu(h: fcQPlainTextEdit_createStandardContextMenuWithPosition(self.h, position.h))

proc cursorForPosition*(self: QPlainTextEdit, pos: gen_qpoint.QPoint): gen_qtextcursor.QTextCursor =

  gen_qtextcursor.QTextCursor(h: fcQPlainTextEdit_cursorForPosition(self.h, pos.h))

proc cursorRect*(self: QPlainTextEdit, cursor: gen_qtextcursor.QTextCursor): gen_qrect.QRect =

  gen_qrect.QRect(h: fcQPlainTextEdit_cursorRect(self.h, cursor.h))

proc cursorRect2*(self: QPlainTextEdit, ): gen_qrect.QRect =

  gen_qrect.QRect(h: fcQPlainTextEdit_cursorRect2(self.h))

proc anchorAt*(self: QPlainTextEdit, pos: gen_qpoint.QPoint): string =

  let v_ms = fcQPlainTextEdit_anchorAt(self.h, pos.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc overwriteMode*(self: QPlainTextEdit, ): bool =

  fcQPlainTextEdit_overwriteMode(self.h)

proc setOverwriteMode*(self: QPlainTextEdit, overwrite: bool): void =

  fcQPlainTextEdit_setOverwriteMode(self.h, overwrite)

proc tabStopWidth*(self: QPlainTextEdit, ): cint =

  fcQPlainTextEdit_tabStopWidth(self.h)

proc setTabStopWidth*(self: QPlainTextEdit, width: cint): void =

  fcQPlainTextEdit_setTabStopWidth(self.h, width)

proc tabStopDistance*(self: QPlainTextEdit, ): float64 =

  fcQPlainTextEdit_tabStopDistance(self.h)

proc setTabStopDistance*(self: QPlainTextEdit, distance: float64): void =

  fcQPlainTextEdit_setTabStopDistance(self.h, distance)

proc cursorWidth*(self: QPlainTextEdit, ): cint =

  fcQPlainTextEdit_cursorWidth(self.h)

proc setCursorWidth*(self: QPlainTextEdit, width: cint): void =

  fcQPlainTextEdit_setCursorWidth(self.h, width)

proc setExtraSelections*(self: QPlainTextEdit, selections: seq[gen_qtextedit.QTextEditExtraSelection]): void =

  var selections_CArray = newSeq[pointer](len(selections))
  for i in 0..<len(selections):
    selections_CArray[i] = selections[i].h

  fcQPlainTextEdit_setExtraSelections(self.h, struct_miqt_array(len: csize_t(len(selections)), data: if len(selections) == 0: nil else: addr(selections_CArray[0])))

proc extraSelections*(self: QPlainTextEdit, ): seq[gen_qtextedit.QTextEditExtraSelection] =

  var v_ma = fcQPlainTextEdit_extraSelections(self.h)
  var vx_ret = newSeq[gen_qtextedit.QTextEditExtraSelection](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qtextedit.QTextEditExtraSelection(h: v_outCast[i])
  vx_ret

proc moveCursor*(self: QPlainTextEdit, operation: gen_qtextcursor.QTextCursorMoveOperation): void =

  fcQPlainTextEdit_moveCursor(self.h, cint(operation))

proc canPaste*(self: QPlainTextEdit, ): bool =

  fcQPlainTextEdit_canPaste(self.h)

proc print*(self: QPlainTextEdit, printer: gen_qpagedpaintdevice.QPagedPaintDevice): void =

  fcQPlainTextEdit_print(self.h, printer.h)

proc blockCount*(self: QPlainTextEdit, ): cint =

  fcQPlainTextEdit_blockCount(self.h)

proc inputMethodQuery*(self: QPlainTextEdit, property: gen_qnamespace.InputMethodQuery): gen_qvariant.QVariant =

  gen_qvariant.QVariant(h: fcQPlainTextEdit_inputMethodQuery(self.h, cint(property)))

proc inputMethodQuery2*(self: QPlainTextEdit, query: gen_qnamespace.InputMethodQuery, argument: gen_qvariant.QVariant): gen_qvariant.QVariant =

  gen_qvariant.QVariant(h: fcQPlainTextEdit_inputMethodQuery2(self.h, cint(query), argument.h))

proc setPlainText*(self: QPlainTextEdit, text: string): void =

  fcQPlainTextEdit_setPlainText(self.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc cut*(self: QPlainTextEdit, ): void =

  fcQPlainTextEdit_cut(self.h)

proc copy*(self: QPlainTextEdit, ): void =

  fcQPlainTextEdit_copy(self.h)

proc paste*(self: QPlainTextEdit, ): void =

  fcQPlainTextEdit_paste(self.h)

proc undo*(self: QPlainTextEdit, ): void =

  fcQPlainTextEdit_undo(self.h)
